Added logging to see what type of request we are getting

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,7 +40,7 @@
       
       //See if we have an access token
         if ($.cookie('access_token')) {
-          window.location.href = "merrr.html";
+          window.location.href = "me.html";
         }
 
         //See if there's a token in the URL
